# c

./: README.md  cylinder.c
c_math/: CMakeLists.txt  main.c
c_math/classes_headers/: divisibleby.c  divisibleby.h  factorial.c  factorial.h  primegen.c  primegen.h  quadratic.c  quadratic.h
